--- a/src/components/Container.css
+++ b/src/components/Container.css
@@ -1,5 +1,7 @@
 .container {
     max-width: 700px;
-    margin-left: auto;
-    margin-right: auto;
-}
+    margin: 0 auto;
+    padding: 0 20px;
+    box-sizing: border-box;
+  }
+  
