--- a/src/components/Input.css
+++ b/src/components/Input.css
@@ -1,22 +1,28 @@
-.field{
-    margin-bottom: 20px; 
-}
-.field label {
-    display: block;
-    margin: 0 0 5px 0;
-    color: #222;
-    font-weight: 700;
-    font-size: 20px;
+.f.field {
+  margin-bottom: 20px;
 }
 
-.field input{
-    background-color: #fff;
-    outline: 0;
-    font-size: 20px;
-    padding: 10px 15px;
-    border: 1px solid rgb(34, 34, 34,0.15);
-    color: #222;
-    border-radius: 4px;
-    width: 100%;
-    box-sizing: border-box; /* calcula la forma del ancho de un archivo html*/
+.field label {
+  display: block;
+  margin: 0 0 5px 0;
+  color: #222;
+  font-weight: 700;
+  font-size: 20px;
+}
+
+.field input {
+  background-color: #f5f5f5;
+  outline: 0;
+  font-size: 20px;
+  padding: 10px 15px;
+  border: 1px solid #ddd;
+  color: #222;
+  border-radius: 4px;
+  width: 100%;
+  box-sizing: border-box;
+  transition: border-color 0.3s ease-in-out;
+}
+
+.field input:focus {
+  border-color: aqua;
 }
